First commit of Jekyll site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Temporary landing page
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>WRAp :: Workshop on Representative Applications</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body>
+    <header role="banner">
+      <h1>WRAp :: Workshop on Representative Applications</h1>
+    </header>
+
+    <main role="main">
+      <h2>Under Construction</h2>
+      <p>
+        The first Workshop on Representative Applications (WRAp) will be held
+        in conjunction with <a
+          href="http://www.mcs.anl.gov/ieeecluster2015/">IEEE Cluster 2015</a>,
+        September 8-11, Chigaco, IL.
+      </p>
+    </main>
+  </body>
+</html>
